.golden/-559153311506421916/golden

INITIALPATH:7:8: error:
    • Exception when trying to run compile-time code:
        String Cannot be aligned with the inside `=` mode
CallStack (from HasCallStack):
  error, called at src/PyF/Internal/QQ.hs:172:18 in main:PyF.Internal.QQ
      Code: Language.Haskell.TH.Quote.quoteExp f "{hello:=100s}"
    • In the quasi-quotation: [f|{hello:=100s}|]
  |
7 | main = [f|{hello:=100s}|]
  |        ^^^^^^^^^^^^^^^^^^
